--- a/themes/landscape/layout/_partial/head.ejs
+++ b/themes/landscape/layout/_partial/head.ejs
@@ -33,4 +33,5 @@
   <% } %>
   <%- css('css/style') %>
   <%- partial('google-analytics') %>
+  <meta name="google-site-verification" content="kG_gz2xi42noxcKTmrJ2c3y4Yeq_U1THAd0ZMh__hMM" />
 </head>
