ファビコンとJuicerTag追加

--- a/themes/landscape/layout/_partial/head.ejs
+++ b/themes/landscape/layout/_partial/head.ejs
@@ -34,4 +34,8 @@
   <%- css('css/style') %>
   <%- partial('google-analytics') %>
   <meta name="google-site-verification" content="kG_gz2xi42noxcKTmrJ2c3y4Yeq_U1THAd0ZMh__hMM" />
+
+  <!-- Juicer Tags -->
+  <script src="//kitchen.juicer.cc/?color=H90bxK9zVRY=" async></script>
+
 </head>
