--- a/themes/landscape/layout/_partial/head.ejs
+++ b/themes/landscape/layout/_partial/head.ejs
@@ -36,7 +36,7 @@
   <meta name="google-site-verification" content="kG_gz2xi42noxcKTmrJ2c3y4Yeq_U1THAd0ZMh__hMM" />
 
   <% if (is_post() && config.generator_amp){ %>
-  <link rel="amphtml" href="<%= config.url %>/<%= page.path %>/amp/index.html">
+  <link rel="amphtml" href="<%= config.url %>/<%= page.path %>amp/index.html">
   <% } %>
 
   <!-- Juicer Tags -->
