--- a/themes/landscape/layout/layout.ejs
+++ b/themes/landscape/layout/layout.ejs
@@ -14,5 +14,7 @@
     <%- partial('_partial/mobile-nav', null, {cache: !config.relative_link}) %>
     <%- partial('_partial/after-footer') %>
   </div>
+  <!-- Go to www.addthis.com/dashboard to customize your tools -->
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5b087b06ba86788d"></script>
 </body>
 </html>
