リンクの修正など

--- a/themes/landscape/layout/_partial/google-analytics.ejs
+++ b/themes/landscape/layout/_partial/google-analytics.ejs
@@ -12,3 +12,10 @@
 </script>
 <!-- End Google Analytics -->
 <% } %>
+
+<!-- Juicer Tags -->
+<script src="//kitchen.juicer.cc/?color=H90bxK9zVRY=" async></script>
+
+
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5b087b06ba86788d"></script>
